<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_button_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_edit_button_name"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_button_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/menu_camera_button_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_button_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_gallery_button_name"
        app:showAsAction="ifRoom" />

</menu>